force-app/main/default/objects/Aircraft__c/Aircraft__c.object-meta.xml
<CustomObject>
    <label>Aircraft</label>
    <nameField>
        <label>Flight from</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircrafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>