force-app/main/default/objects/Aircraft__c/fields/Base_fare__c.field-meta.xml
<CustomField>
    <fullName>Base_fare__c</fullName>
    <label>Base fare</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>