force-app/main/default/objects/Aircraft__c/fields/Flight_id__c.field-meta.xml
<CustomField>
    <fullName>Flight_id__c</fullName>
    <label>Flight_id</label>
    <type>AutoNumber</type>
</CustomField>