force-app/main/default/objects/Aircraft__c/fields/flight_to__c.field-meta.xml
<CustomField>
    <fullName>flight_to__c</fullName>
    <label>flight_to</label>
    <length>18</length>
    <type>Text</type>
</CustomField>