force-app/main/default/objects/Aircraft__c/fields/Flight_type__c.field-meta.xml
<CustomField>
    <fullName>Flight_type__c</fullName>
    <label>Flight type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Class</fullName>
            </value>
            <value>
                <fullName>Economy Class</fullName>
            </value>
            <value>
                <fullName>Commercial class</fullName>
            </value>
            <value>
                <fullName>General Class</fullName>
            </value>
            <value>
                <fullName>VIP class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>