force-app/main/default/objects/Aircraft__c/fields/meal_required__c.field-meta.xml
<CustomField>
    <fullName>meal_required__c</fullName>
    <label>meal required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>