force-app/main/default/objects/Aircraft__c/fields/reserved_seats__c.field-meta.xml
<CustomField>
    <fullName>reserved_seats__c</fullName>
    <label>reserved seats</label>
    <summaryFilterItems>
        <field>Transcation__c.Transcation_type__c</field>
        <operation>equals</operation>
        <value>reserve</value>
    </summaryFilterItems>
    <summaryForeignKey>Transcation__c.flight_from__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>