force-app/main/default/objects/Aircraft__c/fields/service_tax__c.field-meta.xml
<CustomField>
    <fullName>service_tax__c</fullName>
    <formula>( 10 * (   Base_fare__c  +  tax__c ) ) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>service_tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>