force-app/main/default/objects/Aircraft__c/fields/sitting_capacity__c.field-meta.xml
<CustomField>
    <fullName>sitting_capacity__c</fullName>
    <label>sitting_capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>