force-app/main/default/objects/Aircraft__c/fields/tax__c.field-meta.xml
<CustomField>
    <fullName>tax__c</fullName>
    <label>tax</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>