force-app/main/default/objects/Aircraft__c/fields/total_amount__c.field-meta.xml
<CustomField>
    <fullName>total_amount__c</fullName>
    <formula>Base_fare__c   +  service_tax__c +  tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>