force-app/main/default/objects/Aircraft__c/fields/vacant_seats__c.field-meta.xml
<CustomField>
    <fullName>vacant_seats__c</fullName>
    <formula>sitting_capacity__c  -  reserved_seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>vacant seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>