force-app/main/default/objects/Aircraft__c/validationRules/sitting_capacity_cannot_be_less_than_10.validationRule-meta.xml
<ValidationRule>
    <fullName>sitting_capacity_cannot_be_less_than_10</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Flight_type__c , &#39;Business Class&#39;), true, false)</errorConditionFormula>
    <errorMessage>sitting capacity should be greater than 10</errorMessage>
</ValidationRule>